--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 </p>
             </div>
         </section>
-        <!-- <section class="certificates">
+        <section class="certificates">
             <h2>Certificates</h2>
             <div class="certificates__img">
                 <img src="https://i1.rgstatic.net/publication/348603431_Java_Programming_Certificate/links/60091828299bf14088adbd73/largepreview.png" alt="Certificate">
                 <img src="https://i1.rgstatic.net/publication/348603431_Java_Programming_Certificate/links/60091828299bf14088adbd73/largepreview.png" alt="Certificate">
                 <img src="https://i1.rgstatic.net/publication/348603431_Java_Programming_Certificate/links/60091828299bf14088adbd73/largepreview.png" alt="Certificate">
             </div>
-        </section> -->
+        </section>
     </main>
     <footer class="footer">
         <div class="footer__contacts">
