--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                     Morbi varius, dolor eget dictum sagittis, enim orci gravida tellus, vel lobortis diam lacus eget urna. Curabitur semper lacus lacus, cursus laoreet elit hendrerit quis. In fringilla, urna porttitor ultricies ultricies, ante dolor sagittis sapien, non porta sem augue aliquet ex. Vestibulum efficitur dui quis ante cursus, quis varius nibh dapibus. Etiam ac felis diam. Pellentesque placerat nec augue accumsan hendrerit. Vestibulum finibus turpis.
                 </p>
             </div>
-            <div class="content__card">
+            <!-- <div class="content__card">
                 <h2>Who am i?</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elementum tellus vel nisl maximus, quis tincidunt justo luctus. Etiam commodo, lectus a dictum accumsan, dui enim tristique dui, vitae laoreet lectus metus nec orci. Sed posuere tristique dui eget pellentesque. Ut eu neque nunc. Mauris ac sapien sit amet enim suscipit vulputate suscipit eu metus. Nulla facilisi. Pellentesque lorem lacus, sollicitudin eget massa vel, aliquam mattis ipsum. Praesent sed purus mauris.
                     Aenean convallis enim ut nunc scelerisque commodo. Praesent et feugiat dui. Praesent non iaculis erat. Curabitur quis ultricies eros. Integer pellentesque maximus mi. Sed consequat bibendum lacinia. Vestibulum ultricies.
                 </p>
-            </div>
+            </div> -->
         </section>
         <section class="certificates">
             <h2>Certificates</h2>
